--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,40 @@
     <title>我的網站</title>
 </head>
 <body>
-    <h1>我的網站</h1>
-    <div class="btn btn-primary">BTN</div>
+    <div class="container">
+        <h1>我的網站</h1>
+        <div class="btn btn-primary">
+            TEST
+            <i class="fa-solid fa-house"></i>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+<script>
+    const myModal = new bootstrap.Modal("#exampleModal", {
+        keyboard: false
+    });
+    $(".btn-primary").on("click", () => {
+        myModal.show();
+    })
+</script>
 </body>
 </html>
